# WebNavigator_AI

./: .agent_memory.json  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.sh  test_memory.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  index.md  usage.md
tests/: test_adapters.py  test_memory.py  test_selenium.py  test_supervisor.py  test_verifier.py
tests/static/: test_page.html
webnavigator_ai/adapters/: base.py  serpapi.py  serper.py  tavily.py
webnavigator_ai/agent/: __init__.py  memory.py  supervisor.py
webnavigator_ai/selenium_bot/: browser.py
webnavigator_ai/streamlit_app/: app.py
webnavigator_ai/utils/: logging.py  schema.py
webnavigator_ai/verifier/: gemini_verifier.py
